--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:description" content="زی تسک: اولین پلتفرم مدیریت وظایف گیمیفای شده در ایران. با گیمیفیکیشن، بهره‌وری خود را افزایش دهید، وظایف را سازماندهی کنید، امتیاز کسب کنید و به سطوح بالاتر برسید.">
     <meta property="og:image" content="https://placehold.co/1200x630/2563eb/ffffff?text=Zytask.ir"> <meta property="og:url" content="https://www.zytask.ir/"> <meta property="og:type" content="website">
     <meta property="og:locale" content="fa_IR">
-
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="زی تسک | پلتفرم مدیریت وظایف گیمیفای شده | اولین در ایران">
     <meta name="twitter:description" content="زی تسک: اولین پلتفرم مدیریت وظایف گیمیفای شده در ایران. با گیمیفیکیشن، بهره‌وری خود را افزایش دهید، وظایف را سازماندهی کنید، امتیاز کسب کنید و به سطوح بالاتر برسید.">
