--- a/index.html
+++ b/index.html
@@ -3,23 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>زی تسک | پلتفرم مدیریت وظایف گیمیفای شده | اولین در ایران | Zytask.ir</title>
+    <title>زای تسک | پلتفرم مدیریت وظایف گیمیفای شده | اولین در ایران | Zytask.ir</title>
 
-    <meta name="description" content="زی تسک: اولین پلتفرم مدیریت وظایف گیمیفای شده در ایران. با گیمیفیکیشن، بهره‌وری خود را افزایش دهید، وظایف را سازماندهی کنید، امتیاز کسب کنید و به سطوح بالاتر برسید. با دسترسی آفلاین کامل و رابط کاربری مینیمال. Zytask.ir برای مدیریت هوشمند وظایف و افزایش انگیزه.">
+    <meta name="description" content="زای تسک: اولین پلتفرم مدیریت وظایف گیمیفای شده در ایران. با گیمیفیکیشن، بهره‌وری خود را افزایش دهید، وظایف را سازماندهی کنید، امتیاز کسب کنید و به سطوح بالاتر برسید. با دسترسی آفلاین کامل و رابط کاربری مینیمال. Zytask.ir برای مدیریت هوشمند وظایف و افزایش انگیزه.">
 
-    <meta name="keywords" content="زی تسک, zytask, zytask ir, مدیریت وظایف, گیمیفیکیشن, گیم فیکیشن, گیم‌فیکیشن, گیمیفای, بهره‌وری, سازماندهی وظایف, برنامه ریزی, افزایش انگیزه, اپلیکیشن مدیریت وظایف, نرم افزار گیمیفای شده, برنامه ریزی شخصی, ابزار بهره وری, آفلاین تسک منیجر, اولین گیمیفیکیشن ایران, مدیریت پروژه شخصی">
+    <meta name="keywords" content="زای تسک, zytask, zytask ir, مدیریت وظایف, گیمیفیکیشن, گیم فیکیشن, گیم‌فیکیشن, گیمیفای, بهره‌وری, سازماندهی وظایف, برنامه ریزی, افزایش انگیزه, اپلیکیشن مدیریت وظایف, نرم افزار گیمیفای شده, برنامه ریزی شخصی, ابزار بهره وری, آفلاین تسک منیجر, اولین گیمیفیکیشن ایران, مدیریت پروژه شخصی">
 
     <meta name="robots" content="index, follow">
 
-    <link rel="canonical" href="https://www.zytask.ir/"> <meta property="og:title" content="زی تسک | پلتفرم مدیریت وظایف گیمیفای شده | اولین در ایران">
-    <meta property="og:description" content="زی تسک: اولین پلتفرم مدیریت وظایف گیمیفای شده در ایران. با گیمیفیکیشن، بهره‌وری خود را افزایش دهید، وظایف را سازماندهی کنید، امتیاز کسب کنید و به سطوح بالاتر برسید.">
-    <meta property="og:image" content="https://placehold.co/1200x630/2563eb/ffffff?text=Zytask.ir"> <meta property="og:url" content="https://www.zytask.ir/"> <meta property="og:type" content="website">
+    <link rel="canonical" href="https://www.zytask.ir/">
+    <meta property="og:title" content="زای تسک | پلتفرم مدیریت وظایف گیمیفای شده | اولین در ایران">
+    <meta property="og:description" content="زای تسک: اولین پلتفرم مدیریت وظایف گیمیفای شده در ایران. با گیمیفیکیشن، بهره‌وری خود را افزایش دهید، وظایف را سازماندهی کنید، امتیاز کسب کنید و به سطوح بالاتر برسید.">
+    <meta property="og:image" content="https://placehold.co/1200x630/2563eb/ffffff?text=Zytask.ir">
+    <meta property="og:url" content="https://www.zytask.ir/">
+    <meta property="og:type" content="website">
     <meta property="og:locale" content="fa_IR">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="زی تسک | پلتفرم مدیریت وظایف گیمیفای شده | اولین در ایران">
-    <meta name="twitter:description" content="زی تسک: اولین پلتفرم مدیریت وظایف گیمیفای شده در ایران. با گیمیفیکیشن، بهره‌وری خود را افزایش دهید، وظایف را سازماندهی کنید، امتیاز کسب کنید و به سطوح بالاتر برسید.">
-    <meta name="twitter:image" content="https://placehold.co/1200x675/2563eb/ffffff?text=Zytask.ir"> <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 512 512%22><rect x=%220%22 y=%220%22 width=%22512%22 height=%22512%22 rx=%22100%22 ry=%22100%22 fill=%22%232563eb%22/><path fill=%22%23ffffff%22 d=%22M369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0L143 273c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z%22/></svg>">
+    <meta name="twitter:title" content="زای تسک | پلتفرم مدیریت وظایف گیمیفای شده | اولین در ایران">
+    <meta name="twitter:description" content="زای تسک: اولین پلتفرم مدیریت وظایف گیمیفای شده در ایران. با گیمیفیکیشن، بهره‌وری خود را افزایش دهید، وظایف را سازماندهی کنید، امتیاز کسب کنید و به سطوح بالاتر برسید.">
+    <meta name="twitter:image" content="https://placehold.co/1200x675/2563eb/ffffff?text=Zytask.ir">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 512 512%22><rect x=%220%22 y=%220%22 width=%22512%22 height=%22512%22 rx=%22100%22 ry=%22100%22 fill=%22%232563eb%22/><path fill=%22%23ffffff%22 d=%22M369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0L143 273c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z%22/></svg>">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@33.003/misc/Farsi-Digits/Vazirmatn-FD-font-face.css" rel="stylesheet">
@@ -61,7 +65,7 @@
             text-align: justify;
             text-justify: inter-word;
         }
-        /* استایل برای کارت‌های ویژگی (چرا زی تسک؟) */
+        /* استایل برای کارت‌های ویژگی (چرا زای تسک؟) */
         .feature-card {
             background-color: #ffffff; /* سفید */
             /* بازگرداندن به 1px و رنگ قبلی */
@@ -178,7 +182,7 @@
             display: none !important;
         }
 
-        /* استایل برای کارت‌های "چگونه با زی تسک شروع کنیم؟" */
+        /* استایل برای کارت‌های "چگونه با زای تسک شروع کنیم؟" */
         .roadmap-item {
             background-color: #ffffff; /* سفید */
             /* تغییر ضخامت خط دور باکس به 1.5px و رنگ آن به رنگ خطوط نقطه‌چین دایره‌ها */
@@ -341,8 +345,9 @@
         <div class="max-w-7xl mx-auto flex justify-between items-center relative">
             <h1 class="flex text-4xl sm:text-5xl font-extrabold text-gray-800">
                 <span class="header-title-icon-wrapper">
-                    <i class="fa-solid fa-check"></i> </span>
-                <span>زی تسک</span>
+                    <i class="fa-solid fa-check"></i>
+                </span>
+                <span>زای تسک</span>
             </h1>
             <div id="headerButtonContainer" class="header-btn-container">
                 <a href="#entrySection" class="header-entry-btn px-6 rounded-full text-lg font-semibold shadow-md">
@@ -352,18 +357,19 @@
         </div>
     </header>
 
-    <div style="height: 100px;"></div> <main class="flex-grow container mx-auto px-4 sm:px-6 lg:px-8 py-12 sm:py-16">
+    <div style="height: 100px;"></div>
+    <main class="flex-grow container mx-auto px-4 sm:px-6 lg:px-8 py-12 sm:py-16">
         <section class="text-center mb-16">
             <h2 class="text-3xl sm:text-4xl font-bold mb-6 leading-tight">
                 مدیریت هوشمند وظایف
             </h2>
             <p class="text-lg sm:text-xl text-gray-600 max-w-3xl mx-auto text-justify-custom">
-                زی تسک یک پلتفرم نوآورانه مدیریت وظایف است که با ترکیب اصول گیمیفیکیشن، به شما کمک می‌کند تا با انگیزه بیشتری به اهداف خود دست یابید. وظایف روزانه خود را سازماندهی کنید، امتیاز کسب کنید و به سطوح بالاتر برسید.
+                زای تسک یک پلتفرم نوآورانه مدیریت وظایف است که با ترکیب اصول گیمیفیکیشن، به شما کمک می‌کند تا با انگیزه بیشتری به اهداف خود دست یابید. وظایف روزانه خود را سازماندهی کنید، امتیاز کسب کنید و به سطوح بالاتر برسید.
             </p>
         </section>
 
         <section class="mb-16">
-            <h3 class="text-2xl sm:text-3xl font-bold text-center mb-10">چرا زی تسک؟</h3>
+            <h3 class="text-2xl sm:text-3xl font-bold text-center mb-10">چرا زای تسک؟</h3>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="feature-card p-6 rounded-xl text-center">
                     <i class="fa-solid fa-trophy text-5xl mb-4 feature-icon"></i>
@@ -377,34 +383,36 @@
                     <i class="fa-solid fa-list-check text-5xl mb-4 feature-icon"></i>
                     <h4 class="text-xl font-semibold mb-3">مدیریت آسان وظایف</h4>
                     <p class="text-gray-700 text-justify-custom text-sm">
-                        رابط کاربری بصری و ساده زی تسک، سازماندهی وظایف را آسان می‌کند. به راحتی وظایف را اضافه، ویرایش، اولویت‌بندی و پین کنید.
+                        رابط کاربری بصری و ساده زای تسک، سازماندهی وظایف را آسان می‌کند. به راحتی وظایف را اضافه، ویرایش، اولویت‌بندی و پین کنید.
                     </p>
                 </div>
 
                 <div class="feature-card p-6 rounded-xl text-center">
-                    <i class="fa-solid fa-cloud-arrow-down text-5xl mb-4 feature-icon"></i> <h4 class="text-xl font-semibold mb-3">دسترسی آفلاین کامل</h4>
+                    <i class="fa-solid fa-cloud-arrow-down text-5xl mb-4 feature-icon"></i>
+                    <h4 class="text-xl font-semibold mb-3">دسترسی آفلاین کامل</h4>
                     <p class="text-gray-700 text-justify-custom text-sm">
-                        زی تسک کاملاً آفلاین کار می‌کند. داده‌های شما به صورت امن و محلی ذخیره می‌شوند تا در هر زمان و مکانی به وظایف خود رسیدگی کنید.
+                        زای تسک کاملاً آفلاین کار می‌کند. داده‌های شما به صورت امن و محلی ذخیره می‌شوند تا در هر زمان و مکانی به وظایف خود رسیدگی کنید.
                     </p>
                 </div>
             </div>
         </section>
 
         <section class="mb-16">
-            <h3 class="text-2xl sm:text-3xl font-bold text-center mb-10">مزایای استفاده از زی تسک</h3>
+            <h3 class="text-2xl sm:text-3xl font-bold text-center mb-10">مزایای استفاده از زای تسک</h3>
             <div class="flex overflow-x-auto pb-4 hide-scrollbar scroll-snap-x snap-mandatory">
                 <div class="flex-shrink-0 w-64 h-64 bg-white p-6 rounded-xl shadow-md flex flex-col items-center justify-center text-center mx-2 snap-center">
                     <i class="fa-solid fa-infinity text-5xl mb-4 feature-icon"></i>
                     <h4 class="text-xl font-semibold mb-3">همیشه رایگان</h4>
                     <p class="text-gray-700 text-sm">
-                        زی تسک کاملاً رایگان است و همیشه رایگان خواهد ماند.
+                        زای تسک کاملاً رایگان است و همیشه رایگان خواهد ماند.
                     </p>
                 </div>
 
                 <div class="flex-shrink-0 w-64 h-64 bg-white p-6 rounded-xl shadow-md flex flex-col items-center justify-center text-center mx-2 snap-center">
-                    <i class="fa-solid fa-award text-5xl mb-4 feature-icon"></i> <h4 class="text-xl font-semibold mb-3">اولین در ایران</h4>
+                    <i class="fa-solid fa-award text-5xl mb-4 feature-icon"></i>
+                    <h4 class="text-xl font-semibold mb-3">اولین در ایران</h4>
                     <p class="text-gray-700 text-sm">
-                        زی تسک، پیشگام مدیریت وظایف گیمیفای شده در ایران.
+                        زای تسک، پیشگام مدیریت وظایف گیمیفای شده در ایران.
                     </p>
                 </div>
 
@@ -443,14 +451,14 @@
         </section>
 
         <section class="mb-16 md:hidden">
-            <h3 class="text-2xl sm:text-3xl font-bold text-center mb-10">چگونه با زی تسک شروع کنیم؟</h3>
+            <h3 class="text-2xl sm:text-3xl font-bold text-center mb-10">چگونه با زای تسک شروع کنیم؟</h3>
             <div class="roadmap-container">
                 <div class="roadmap-item">
                     <div class="roadmap-circle">1</div>
                     <i class="fa-solid fa-right-to-bracket roadmap-icon"></i>
                     <h4 class="text-xl font-semibold mb-2">ورود و شروع سریع</h4>
                     <p class="text-gray-700 text-sm">
-                        به سادگی و بدون نیاز به ثبت‌نام پیچیده، فوراً وارد زی تسک شوید.
+                        به سادگی و بدون نیاز به ثبت‌نام پیچیده، فوراً وارد زای تسک شوید.
                     </p>
                 </div>
 
@@ -484,14 +492,14 @@
         </section>
 
         <section class="mb-16 hidden md:block">
-            <h3 class="text-2xl sm:text-3xl font-bold text-center mb-10">چگونه با زی تسک شروع کنیم؟</h3>
+            <h3 class="text-2xl sm:text-3xl font-bold text-center mb-10">چگونه با زای تسک شروع کنیم؟</h3>
             <div class="roadmap-container">
                 <div class="roadmap-item">
                     <div class="roadmap-circle">1</div>
                     <i class="fa-solid fa-right-to-bracket roadmap-icon"></i>
                     <h4 class="text-xl font-semibold mb-2">ورود و شروع سریع</h4>
                     <p class="text-gray-700 text-sm">
-                        به سادگی و بدون نیاز به ثبت‌نام پیچیده، فوراً وارد زی تسک شوید.
+                        به سادگی و بدون نیاز به ثبت‌نام پیچیده، فوراً وارد زای تسک شوید.
                     </p>
                 </div>
 
@@ -527,10 +535,10 @@
         <section id="entrySection" class="bg-gray-100 p-8 sm:p-10 rounded-xl shadow-inner text-center max-w-2xl mx-auto">
             <h3 class="text-2xl sm:text-3xl font-bold mb-6">آماده‌اید تا بهره‌وری خود را متحول کنید؟</h3>
             <p class="text-lg text-gray-700 mb-8 text-justify-custom">
-                همین حالا به زی تسک بپیوندید و سفر خود را به سوی مدیریت بهتر زمان و افزایش انگیزه آغاز کنید. بدون نیاز به ثبت‌نام پیچیده، فقط با یک کلیک!
+                همین حالا به زای تسک بپیوندید و سفر خود را به سوی مدیریت بهتر زمان و افزایش انگیزه آغاز کنید. بدون نیاز به ثبت‌نام پیچیده، فقط با یک کلیک!
             </p>
             <a id="bottomEntryButton" href="#" class="btn-primary px-8 py-4 rounded-full text-xl font-bold shadow-lg">
-                ورود به برنامه زی تسک
+                ورود به برنامه زای تسک
             </a>
         </section>
     </main>
