--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       background-color: #1d4ed8;
       transform: scale(1.05);
     }
-    /* دکمه ورود به برنامه در هدر */
+    /* دکمه ورود به برنامه در هدر – این دکمه به صورت پیش‌فرض به آدرس انکر "#entrySection" تنظیم شده */
     .header-entry-btn {
       background-color: #ffffff;
       color: #2563eb;
@@ -318,6 +318,7 @@
         </span>
         <span>زای تسک</span>
       </h1>
+      <!-- دکمه هدر به صورت پیش‌فرض به آدرس انکر "#entrySection" تنظیم شده است -->
       <div id="headerButtonContainer" class="header-btn-container">
         <a href="#entrySection" class="header-entry-btn px-6 rounded-full text-lg font-semibold shadow-md">
           ورود به برنامه
@@ -493,11 +494,13 @@
       </div>
     </section>
 
+    <!-- باکس ورود به برنامه که پایین صفحه قرار دارد -->
     <section id="entrySection" class="bg-gray-100 p-8 sm:p-10 rounded-xl shadow-inner text-center max-w-2xl mx-auto">
       <h3 class="text-2xl sm:text-3xl font-bold mb-6">آماده‌اید تا بهره‌وری خود را متحول کنید؟</h3>
       <p class="text-lg text-gray-700 mb-8 text-justify-custom">
         همین حالا به زای تسک بپیوندید و سفر خود را به سوی مدیریت بهتر زمان و افزایش انگیزه آغاز کنید. بدون نیاز به ثبت‌نام پیچیده، فقط با یک کلیک!
       </p>
+      <!-- این دکمه کاربر را به زیر دامنه‌ی app هدایت می‌کند -->
       <a id="bottomEntryButton" href="#" class="btn-primary px-8 py-4 rounded-full text-xl font-bold shadow-lg">
         ورود به برنامه زای تسک
       </a>
@@ -518,23 +521,15 @@
   </button>
 
   <script>
-    /* به‌روزرسانی دکمه‌های ورود به برنامه به صورت داینامیک */
+    /* دکمه ورود به برنامه در پایین صفحه به صورت داینامیک به زیر دامنه‌ی app ارجاع می‌دهد */
     document.addEventListener('DOMContentLoaded', () => {
       const currentHostname = window.location.hostname;
-      // در محیط توسعه (localhost) لینک داینامیک را به یک پورت مشخص تغییر دهید
+      // در محیط توسعه (localhost) لینک تستی تنظیم می‌شود
       let appSubdomainUrl = currentHostname.includes('localhost')
         ? 'http://localhost:3000'
         : `https://app.${currentHostname}`;
 
       console.log("Dynamic App URL:", appSubdomainUrl);
-
-      const headerEntryButton = document.querySelector('.header-entry-btn');
-      if (headerEntryButton) {
-        headerEntryButton.href = appSubdomainUrl;
-        console.log('Header entry button URL set to:', headerEntryButton.href);
-      } else {
-        console.error('Header entry button not found!');
-      }
 
       const bottomEntryButton = document.getElementById('bottomEntryButton');
       if (bottomEntryButton) {
@@ -575,11 +570,14 @@
       window.scrollTo({ top: 0, behavior: 'smooth' });
     });
 
-    /* اسکرول نرم برای لینک‌های انکر */
+    /* اسکرول نرم برای لینک‌های انکر (فقط روی عناصری که href آنها با "#" شروع می‌شود) */
     document.querySelectorAll('a[href^="#"]').forEach(anchor => {
       anchor.addEventListener('click', function (e) {
         e.preventDefault();
-        document.querySelector(this.getAttribute('href')).scrollIntoView({ behavior: 'smooth' });
+        const target = document.querySelector(this.getAttribute('href'));
+        if (target) {
+          target.scrollIntoView({ behavior: 'smooth' });
+        }
       });
     });
 
@@ -611,7 +609,7 @@
         if (!isDown) return;
         e.preventDefault();
         const x = e.pageX - sliderContainer.offsetLeft;
-        const walk = (x - startX) * 2; // می‌توانید سرعت را تنظیم کنید
+        const walk = (x - startX) * 2; // تنظیم سرعت در صورت نیاز
         sliderContainer.scrollLeft = scrollLeft - walk;
       });
     }
