--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
   <meta property="og:url" content="https://www.zytask.ir/">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="fa_IR">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="زای تسک | پلتفرم مدیریت وظایف گیمیفای شده | اولین در ایران">
   <meta name="twitter:description" content="زای تسک: اولین پلتفرم مدیریت وظایف گیمیفای شده در ایران. با گیمیفیکیشن، بهره‌وری خود را افزایش دهید، وظایف را سازماندهی کنید، امتیاز کسب کنید و به سطوح بالاتر برسید.">
   <meta name="twitter:image" content="https://placehold.co/1200x675/2563eb/ffffff?text=Zytask.ir">
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 512 512%22><rect x=%220%22 y=%220%22 width=%22512%22 height=%22512%22 rx=%22100%22 ry=%22100%22 fill=%22%232563eb%22/><path fill=%22%23ffffff%22 d=%22M369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0L143 273c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z%22/></svg>">
-
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@33.003/misc/Farsi-Digits/Vazirmatn-FD-font-face.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" xintegrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
